test/cli/test-validating-policy/custom-crds/fail-gadget.yaml
apiVersion: example.com/v1
kind: Gadget
metadata:
  name: bad-gadget
  namespace: default
