test/cli/test-validating-policy/custom-crds/fail-widget.yaml
apiVersion: example.com/v1
kind: Widget
metadata:
  name: bad-widget
  namespace: default
