test/cli/test-validating-policy/custom-crds/pass-gadget.yaml
apiVersion: example.com/v1
kind: Gadget
metadata:
  name: good-gadget
  namespace: default
  labels:
    app: my-app
